--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -2,10 +2,10 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  height: 240px;
+  gap: 12.5px;
+  height: 230px;
   justify-content: center;
-  padding-top: 15px;
+  padding-top: 25px;
 }
 
 .heading {
@@ -19,6 +19,7 @@
 }
 
 .description {
+  color: rgba(0, 0, 0, 0.6);
   font-family: "Noto Sans TC", sans-serif;
   font-size: 16px;
 }
