--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,15 @@
 @import "../node_modules/modern-normalize/modern-normalize.css";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Noto+Serif+TC&family=Poiret+One&display=swap");
 
+* {
+  font-family: "Noto Sans TC", sans-serif;
+}
+
 h1,
 h2 {
   margin: 0;
+}
+
+a {
+  text-decoration: none;
 }
