--- a/src/components/Footer/Column.module.css
+++ b/src/components/Footer/Column.module.css
@@ -6,7 +6,8 @@
   );
   border-radius: 5px;
   display: flex;
-  padding: 10px 20px;
+  gap: 20px;
+  padding: 15px 25px;
   transition: 0.2s ease-out;
 }
 
@@ -19,14 +20,24 @@
 
 .avatar {
   border-radius: 50%;
-  height: 50px;
-  margin-right: 20px;
+  height: 45px;
   transition: 0.2s ease-out;
-  width: 50px;
+  width: 45px;
 }
 
-.text {
+.textContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 7.5px;
+}
+
+.textName {
   color: #fff;
   font-size: 16px;
   font-weight: bold;
+}
+
+.textContent {
+  color: rgb(135, 135, 135);
+  font-size: 14px;
 }
