--- a/src/components/Series/PreviewThreeColumns.module.css
+++ b/src/components/Series/PreviewThreeColumns.module.css
@@ -7,14 +7,14 @@
 .column {
   display: flex;
   flex-direction: column;
-  padding: 5px;
+  margin: 5px;
 }
 
 .coverImage {
   aspect-ratio: 4/3;
   object-fit: cover;
   opacity: 0.8;
-  transition: 0.2s ease-out;
+  transition: opacity 0.2s ease-out;
   width: 100%;
 }
 
@@ -25,11 +25,25 @@
 .title {
   color: rgb(180, 0, 40);
   font-size: 24px;
-  padding-top: 10px;
+  margin-top: 10px;
 }
 
 .content {
   color: rgb(60, 60, 60);
   line-height: 1.6;
-  padding: 10px 0;
+  margin: 10px 0;
+}
+
+.skeletonCoverImage {
+  aspect-ratio: 4/3;
+}
+
+.skeletonTitle {
+  font-size: 24px;
+  margin-top: 10px;
+}
+
+.skeletonContent {
+  height: 150px;
+  margin: 10px 0;
 }
