--- a/src/components/Series/PreviewColumns.module.css
+++ b/src/components/Series/PreviewColumns.module.css
@@ -1,4 +1,4 @@
-.threeColumns {
+.container {
   display: grid;
   gap: 10px;
   grid-template-columns: repeat(3, 320px);
@@ -18,7 +18,7 @@
   aspect-ratio: 4/3;
   object-fit: cover;
   opacity: 0.8;
-  transition: opacity 0.2s ease-out;
+  transition: 0.2s ease-out;
   width: 100%;
 }
 
@@ -34,6 +34,7 @@
 
 .content {
   color: rgb(60, 60, 60);
+  font-size: 16px;
   line-height: 1.6;
   margin: 10px 0;
 }
