--- a/src/components/ReadingSidebar/index.module.css
+++ b/src/components/ReadingSidebar/index.module.css
@@ -1,8 +1,18 @@
 .container {
   display: flex;
   flex-direction: column;
-  padding: 20px 0 15px 15px;
+  padding: 5px 0 15px 15px;
   width: 180px;
+}
+
+.containerFixed {
+  position: fixed;
+}
+
+@media (max-width: 1000px) {
+  .container {
+    display: none;
+  }
 }
 
 .siblingArticlesButtonGroup {
@@ -17,6 +27,7 @@
   flex-direction: column;
   gap: 2.5px;
   text-align: left;
+  width: 100%;
 }
 
 .textSmall {
