--- a/src/components/Navigation/FixedNavigation.module.css
+++ b/src/components/Navigation/FixedNavigation.module.css
@@ -9,7 +9,6 @@
   padding: 0 40px;
   position: fixed;
   top: 0;
-  transition: 0.5s;
   width: 100%;
   z-index: 1;
 }
@@ -40,8 +39,11 @@
 
 .visible {
   opacity: 1;
+  transition: top 0s, opacity 0.5s;
 }
 
 .invisible {
   opacity: 0;
+  top: -10000px;
+  transition: top 0s 0.5s, opacity 0.5s;
 }
