--- a/src/components/Series/index.module.css
+++ b/src/components/Series/index.module.css
@@ -3,12 +3,7 @@
 }
 
 .title {
+  color: #000;
   font: 32px "Noto Serif TC", serif;
   padding: 35px 0 25px;
-}
-
-.chapterButtonGroup {
-  display: flex;
-  gap: 10px;
-  padding-bottom: 20px;
 }
