--- a/src/pages/admin/base.module.css
+++ b/src/pages/admin/base.module.css
@@ -1,6 +1,12 @@
+.headerButtonsContainer {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 5px;
+}
+
 .tableHeader {
   color: rgba(0, 0, 0, 0.4);
-  margin: 25px 0 20px;
+  margin: 30px 0 20px;
 }
 
 .tableRow,
